# dirlin

./: README.md  pyproject.toml
dirlin/: __init__.py  folder.py  validation.py
dirlin/db/: setup.py
dirlin/db/queries/: quickstart.py
dirlin/dq/: core.py  interfaces.py  pipelines.py
dirlin/dq/core/: data_sources.py
src/dirlin/: __init__.py  folder.py  pdf.py
src/dirlin/db/: setup.py
src/dirlin/db/queries/: quickstart.py
src/dirlin/dq/: core.py
test/: helpers.py  test_validation.py  test_validation_inheritance.py  test_validation_v3.py
