[project]
name = "Dirlin"
version = "0.5.1"
description = "Handy functions for local files"
authors = [{name = "mendozasho"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "openpyxl",
    "xlrd==2.0.1",
    "pyxlsb==1.0.10",
    "pandas==2.0.2",
    "chardet==5.2.0",
    "numpy<2.0.0",
    "tqdm~=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "setuptools"
]

pdf = [
    "pdfplumber==0.11.6",
    "pypdf==5.6.0",
    "pypdf2"
]

db = [
    "sqlalchemy",
    "pydantic",
]
